--- a/iOS/Remote-Sentry-Gun/Remote-Sentry-Gun-Info.plist
+++ b/iOS/Remote-Sentry-Gun/Remote-Sentry-Gun-Info.plist
@@ -2,10 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>RSG</string>
+	<string>Remote Sentry </string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIcons</key>
