Horizontal splash screen woot!

--- a/iOS/Remote-Sentry-Gun/Remote-Sentry-Gun-Info.plist
+++ b/iOS/Remote-Sentry-Gun/Remote-Sentry-Gun-Info.plist
@@ -32,6 +32,16 @@
 			<key>UILaunchImageMinimumOSVersion</key>
 			<string>7.0</string>
 			<key>UILaunchImageName</key>
+			<string>splash_screen_small</string>
+			<key>UILaunchImageOrientation</key>
+			<string>Portrait</string>
+			<key>UILaunchImageSize</key>
+			<string>{320, 480}</string>
+		</dict>
+		<dict>
+			<key>UILaunchImageMinimumOSVersion</key>
+			<string>7.0</string>
+			<key>UILaunchImageName</key>
 			<string>splash_screen</string>
 			<key>UILaunchImageOrientation</key>
 			<string>Portrait</string>
